--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://41d9c20b-56ff-4c46-b87f-44e5b9dd3566.preview.emergentagent.com
 WDS_SOCKET_PORT=443
